# aoc2025

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
solutions/: __init__.py  solution01.py  solution02.py  solution03.py  solution04.py  solution05.py  solution06.py  solution07.py  solution08.py
