[tool.poetry]
name = "aoc2025"
version = "0.1.0"
description = ""
authors = ["Erik Jensen <erik@findanomaly.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.7"
mypy = "^1.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
